add check user ips

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -20,7 +20,7 @@
                     <li><a href="#" class="nav-link px-2 text-white">Features</a></li>
                     <li><a href="#" class="nav-link px-2 text-white">Pricing</a></li>
                     <li><a href="{{ path('cart')}}" class="nav-link px-2 text-white">Cart</a></li>
-                    <li><a href="{{ path('orderCart')}}" class="nav-link px-2 text-white">Order</a></li>
+                    <li><a href="{{ path('cartAction')}}" class="nav-link px-2 text-white">Order</a></li>
                 </ul>
 
                 <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
