--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,41 +1,58 @@
+
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
+<head>
+    <meta charset="UTF-8">
 
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    </head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+</head>
 
 
-    <body>
-    <header class="p-3 bg-dark text-white">
-        <div class="container">
-            <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-                <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
-                    <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"></use></svg>
-                </a>
+<body>
+<header class="p-3 bg-dark text-white">
+    <div class="container">
+        <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+            <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
+                <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"></use></svg>
+            </a>
 
-                <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-                    <li><a href="{{ path('shopList')}}" class="nav-link px-2 text-secondary">Home</a></li>
-                    <li><a href="#" class="nav-link px-2 text-white">Features</a></li>
-                    <li><a href="#" class="nav-link px-2 text-white">Pricing</a></li>
-                    <li><a href="{{ path('cart')}}" class="nav-link px-2 text-white">Cart</a></li>
-                    <li><a href="{{ path('cartAction')}}" class="nav-link px-2 text-white">Order</a></li>
-                </ul>
+            <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+                <li><a href="{{ path('homePage')}}" class="nav-link px-2 text-secondary">На главную</a></li>
+                <li><a href="{{ path('shopList')}}" class="nav-link px-2 text-white">Каталог</a></li>
+                <li><a href="#" class="nav-link px-2 text-white">Pricing</a></li>
+                <li><a href="{{ path('cart')}}" class="nav-link px-2 text-white">Корзина</a></li>
+                <li><a href="{{ path('orderCart')}}" class="nav-link px-2 text-white">Order</a></li>
+                <li><a href="{{ path('adminHome')}}" class="nav-link px-2 text-white">Admin</a></li>
+            </ul>
 
-                <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
-                    <input type="search" class="form-control form-control-dark" placeholder="Search..." aria-label="Search">
-                </form>
+            <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
+                <input type="search" class="form-control form-control-dark" placeholder="Search..." aria-label="Search">
+            </form>
 
-                <div class="text-end">
-                    <a  class="btn btn-outline-light me-2" href="{{ path('login') }}" >Login</a>
+            <div class="text-end">
+                <a  class="btn btn-outline-light me-2" href="{{ path('login') }}" >Login</a>
 
-                    <a  class="btn btn-warning" href="{{ path('app_register') }}" >Sign-up</a>
-                    <a  class="btn btn-warning" href="{{ path('app_logout') }}" >Logout</a>
-                </div>
+                <a  class="btn btn-warning" href="{{ path('app_register') }}" >Sign-up</a>
+                <a  class="btn btn-warning" href="{{ path('app_logout') }}" >Logout</a>
             </div>
         </div>
-    </header>
-        {% block body %} {% endblock %}
-    </body>
+    </div>
+</header>
+
+{% block body %} {% endblock %}
+
+<footer class="blog-footer">
+    <p>Blog template built for <a href="https://getbootstrap.com/">Bootstrap</a> by <a href="https://twitter.com/mdo">@mdo</a>.</p>
+    <p>
+        <a href="#">Back to top</a>
+    </p>
+</footer>
+{% block javascript %}
+
+{% endblock %}
+
+</body>
+
+
 </html>
+
